# py_virtual_gpu

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  RESEARCH.md  Untitled1.ipynb  pyproject.toml  pytest.ini  requirements.txt
app/: App.tsx  KernelLogView.tsx  MemoryViewer.tsx  SmDetailView.tsx  components.tsx  gpuSimulatorService.ts  index.html  package.json  tsconfig.json  types.ts  vitest.setup.ts
docs/: class_structure.md  components_and_execution.md
examples/: README.md  adam_basic.py  convolution_2d.py  inspect_allocations.py  linear_regression_mse.py  logistic_regression.py  matrix_mul.py  mixed_precision.py  reduction_sum.py  reduction_sum_multi.py  sin_mlp.py  vector_mul.py  vector_sum_atomic.py
py_virtual_gpu/: __init__.py  atomics.py  dispatch.py  errors.py  fence.py  global_memory.py  kernel.py  memory.py  memory_hierarchy.py  optimizers.py  shared_memory.py  sm.py  streaming_multiprocessor.py  sync.py  thread.py  thread_block.py  threadblock.py  transfer.py  types.py  virtualgpu.py  warp.py  warp_utils.py
tests/: test_allocations_endpoint.py  test_api.py  test_constant_memory.py  test_device_pointer_index.py  test_dispatch.py  test_divergence_monitoring.py  test_events_endpoint.py  test_examples.py  test_execution_flow.py  test_fence.py  test_global_memory.py  test_global_memory_atomic.py  test_gpu_manager.py  test_gpu_metrics_endpoint.py  test_gpu_state_endpoint.py  test_gpus_endpoint.py  test_grid_sync.py  test_host_device_transfers.py  test_kernel.py  test_kernel_indices.py  test_kernel_log_endpoint.py  test_local_memory.py  test_memory_coalescing.py  test_memory_hierarchy.py  test_memory_slice_endpoints.py  (+18 more)
(+27 files in other folders)
