[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_virtual_gpu"
version = "0.1.0"
description = "Python Virtual GPU simulator"
authors = [{name="Diego Rodrigues"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["py_virtual_gpu*"]

[project.optional-dependencies]
# Include httpx so FastAPI's TestClient works out of the box
# Pin httpx below 0.24 for compatibility with our API tests
api = ["fastapi", "uvicorn[standard]", "httpx<0.24"]
